--- a/Halifa_Ruben_2_Dashboard_082023.ipynb
+++ b/Halifa_Ruben_2_Dashboard_082023.ipynb
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9244eb30",
+   "id": "c80ec2e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,13 +154,13 @@
     "        print(\"La requête a échoué avec le code :\", response.status_code)\n",
     "        print(\"Contenu du message :\", response.text)\n",
     "\n",
-    "        return df"
+    "        return None"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5441c830",
+   "id": "f4189a63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1b9ab14b",
+   "id": "5cff27c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4256be0f",
+   "id": "97ef4f2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,6 +285,78 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "a05066bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def API_risque_th_model():\n",
+    "    # Fonction appelant l'API, renvoie les valeurs risques clients insolvables selon threshold\n",
+    "    \n",
+    "    # Lien de l'API permettant de faire la prédiction\n",
+    "    url=\"http://banking-model-api-924e29320872.herokuapp.com/risque_th_model\"\n",
+    "\n",
+    "    # On envoie une requête POST au format JSON \n",
+    "    response = requests.post(url)\n",
+    "\n",
+    "    # On vérigie l'état de la réponse\n",
+    "    if response.status_code == 200:\n",
+    "        # Si tout s'est bien déroulé\n",
+    "        \n",
+    "        # On récupère une réponse sous le format json\n",
+    "        df_reponse = response.json()  \n",
+    "\n",
+    "        # On retransforme sous format DataFrame\n",
+    "        df_reponse = pd.DataFrame(df_reponse.get(\"data\", {}))\n",
+    "\n",
+    "        # On retourne le dataframe modifié\n",
+    "        return df_reponse\n",
+    "    else:\n",
+    "        # La requête a échouée\n",
+    "        print(\"La requête a échoué avec le code :\", response.status_code)\n",
+    "        print(\"Contenu du message :\", response.text)\n",
+    "\n",
+    "        return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2b345760",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def API_client_th_model():\n",
+    "    # Fonction appelant l'API, renvoie les valeurs de pourcentage clients solvables selon threshold\n",
+    "    \n",
+    "    # Lien de l'API permettant de faire la prédiction\n",
+    "    url=\"http://banking-model-api-924e29320872.herokuapp.com/client_th_model\"\n",
+    "\n",
+    "    # On envoie une requête POST au format JSON \n",
+    "    response = requests.post(url)\n",
+    "\n",
+    "    # On vérigie l'état de la réponse\n",
+    "    if response.status_code == 200:\n",
+    "        # Si tout s'est bien déroulé\n",
+    "        \n",
+    "        # On récupère une réponse sous le format json\n",
+    "        df_reponse = response.json()  \n",
+    "\n",
+    "        # On retransforme sous format DataFrame\n",
+    "        df_reponse = pd.DataFrame(df_reponse.get(\"data\", {}))\n",
+    "\n",
+    "        # On retourne le dataframe modifié\n",
+    "        return df_reponse\n",
+    "    else:\n",
+    "        # La requête a échouée\n",
+    "        print(\"La requête a échoué avec le code :\", response.status_code)\n",
+    "        print(\"Contenu du message :\", response.text)\n",
+    "\n",
+    "        return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "9148746e",
    "metadata": {},
    "outputs": [],
@@ -303,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "804d3337",
    "metadata": {},
    "outputs": [],
@@ -421,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "0345718b",
    "metadata": {},
    "outputs": [],
@@ -516,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "e4ea798d",
    "metadata": {},
    "outputs": [],
@@ -612,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "23de7850",
    "metadata": {},
    "outputs": [],
@@ -688,8 +760,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "e95c4a3b",
+   "execution_count": 16,
+   "id": "25f2a028",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "d3fc1051",
    "metadata": {},
    "outputs": [],
@@ -760,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "02170111",
    "metadata": {},
    "outputs": [],
@@ -788,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "b1d28100",
    "metadata": {
     "scrolled": false
@@ -809,7 +881,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x209f03ec810>"
+       "<IPython.lib.display.IFrame at 0x29d386081d0>"
       ]
      },
      "metadata": {},
@@ -1138,7 +1210,7 @@
     "\n",
     "def read_file_page2(fl_risque, fl_nb_client):\n",
     "    if (fl_risque is None and fl_nb_client is None):\n",
-    "        fl_risque, fl_nb_client = pd.read_csv(\"Risque assessment.csv\"), pd.read_csv(\"Potentiel clients.csv\")\n",
+    "        fl_risque, fl_nb_client = API_risque_th_model(), API_client_th_model()\n",
     "        fl_risque = fl_risque.to_json(date_format='iso', orient='split')\n",
     "        fl_nb_client = fl_nb_client.to_json(date_format='iso', orient='split')\n",
     "        return fl_risque, fl_nb_client\n",
@@ -1325,16 +1397,15 @@
     "    Input(component_id=\"clear-screen\", component_property=\"data\"),\n",
     "    Input(component_id=\"exchange-button\", component_property=\"n_clicks\"),\n",
     "    Input(component_id=\"fichier_utilisateur\", component_property=\"data\"),  \n",
+    "    Input(component_id=\"graph_pred\", component_property=\"clickData\"),\n",
+    "    Input(component_id=\"graph_variables\", component_property=\"clickData\"),\n",
     "    \n",
     "    prevent_initial_call=True,\n",
     ")\n",
     "\n",
-    "\n",
     "def update_dropdown_menu(selected_client, selected_variable_x, selected_variable_y, \n",
     "                         selected_affichage, selected_client_variable, variance_importance, \n",
-    "                         clear_statut, n_click_echange, fichier_utilisateur):\n",
-    "    \n",
-    "\n",
+    "                         clear_statut, n_click_echange, fichier_utilisateur, click_graph_pred, click_graph_var):\n",
     "    \n",
     "    if ctx.triggered_id == \"exchange-button\":\n",
     "        # Remise à 0 du boutton\n",
@@ -1383,13 +1454,31 @@
     "        # On revient à la condition initiale\n",
     "        selected_client = None if selected_client == [] else selected_client\n",
     "\n",
-    "        # On transforme en liste\n",
+    "        # On transforme en liste si un seul client sélectionné\n",
     "        if (type(selected_client) != list) & (selected_client is not None):\n",
     "            selected_client = [selected_client]\n",
+    "            # On ajoute à la liste si on appuie sur un client sur le graph\n",
+    "            if ctx.triggered_id == \"graph_pred\":\n",
+    "                selected_client.append(click_graph_pred[\"points\"][0][\"customdata\"][0])\n",
+    "            elif ctx.triggered_id == \"graph_variables\":\n",
+    "                selected_client.append(click_graph_var[\"points\"][0][\"customdata\"][0])\n",
+    "        elif selected_client is None :             \n",
+    "            # On ajoute à la liste si on appuie sur un client sur le graph\n",
+    "            if ctx.triggered_id == \"graph_pred\":\n",
+    "                selected_client = [click_graph_pred[\"points\"][0][\"customdata\"][0]]\n",
+    "            elif ctx.triggered_id == \"graph_variables\":\n",
+    "                selected_client = [click_graph_var[\"points\"][0][\"customdata\"][0]]\n",
+    "                \n",
+    "        else : \n",
+    "            # On ajoute à la liste si on appuie sur un client sur le graph\n",
+    "            if ctx.triggered_id == \"graph_pred\":\n",
+    "                selected_client.append(click_graph_pred[\"points\"][0][\"customdata\"][0])\n",
+    "            elif ctx.triggered_id == \"graph_variables\":\n",
+    "                selected_client.append(click_graph_var[\"points\"][0][\"customdata\"][0])\n",
     "\n",
     "            # On place en premier ceux qui ont été sélectionnés\n",
     "        option_client_variable = []\n",
-    "\n",
+    "         \n",
     "        if selected_client is not None:\n",
     "            option_client_variable.extend([{'label': str(client), 'value': client} for client in selected_client])\n",
     "            option_client_variable.extend([{'label': str(client), 'value': client} for client in file_df['SK_ID_CURR'] if client not in selected_client])\n",
@@ -1430,7 +1519,22 @@
     "                \n",
     "        return (option_drop_clients, option_drop_var_x, option_drop_var_y, option_drop_var_graph, option_client_variable,\n",
     "                selected_client, selected_variable_x, selected_variable_y, selected_affichage, n_click_echange)\n",
+    "\n",
+    "@app.callback(\n",
+    "    Output(component_id=\"dropdown_client_var\", component_property=\"value\"),\n",
     "    \n",
+    "    Input(component_id=\"graph_pred\", component_property=\"clickData\"),\n",
+    "    Input(component_id=\"graph_variables\", component_property=\"clickData\"),\n",
+    "    prevent_initial_call=True,\n",
+    ")\n",
+    "def select_client_graph_var(click_graph_pred, click_graph_var):\n",
+    "    # On sélectionne le client pour afficher l'impact de ses features sur son score\n",
+    "    if ctx.triggered_id == \"graph_pred\":\n",
+    "        return click_graph_pred[\"points\"][0][\"customdata\"][0]\n",
+    "    elif ctx.triggered_id == \"graph_variables\":\n",
+    "        return click_graph_var[\"points\"][0][\"customdata\"][0] \n",
+    "\n",
+    "\n",
     "@app.callback(\n",
     "    Output(component_id=\"table_client\", component_property=\"children\"),\n",
     "    Output(component_id=\"table_prediction\", component_property=\"children\"),\n",
@@ -1440,10 +1544,9 @@
     "    \n",
     "    prevent_initial_call=True,\n",
     ")\n",
-    "\n",
-    "\n",
+    "                \n",
     "def affichage_tab_clients(selected_client, fichier_utilisateur):\n",
-    "            \n",
+    "    \n",
     "    if fichier_utilisateur is not None :\n",
     "        # On prend la colonne ID client et les dernières colonnes liées à la prédiction crédit\n",
     "        cols = [0] + list(range(-6, 0))\n",
@@ -1455,24 +1558,32 @@
     "            table1 = dash_table.DataTable(\n",
     "                data=file_df.iloc[:, :100].to_dict('records'),\n",
     "                page_size=10,\n",
-    "                style_table={'overflowX': 'auto'}\n",
+    "                style_table={'overflowX': 'auto'},\n",
+    "                sort_action='native',  # permet de trier la colonnes\n",
+    "                sort_mode='multi',      # permet de trier plusieurs colonnes\n",
     "            )\n",
     "            table2 = dash_table.DataTable(\n",
     "                data=file_df.iloc[:, cols].to_dict('records'),\n",
     "                page_size=10,\n",
-    "                style_table={'overflowX': 'auto'}\n",
+    "                style_table={'overflowX': 'auto'},\n",
+    "                sort_action='native',  # permet de trier la colonnes\n",
+    "                sort_mode='multi',      # permet de trier plusieurs colonnes\n",
     "            )\n",
     "        else :\n",
     "            filtered_df = file_df[file_df['SK_ID_CURR'].isin(selected_client)]\n",
     "            table1 = dash_table.DataTable(\n",
     "                data=filtered_df.iloc[:, :100].to_dict('records'),\n",
     "                page_size=10,\n",
-    "                style_table={'overflowX': 'auto'}\n",
+    "                style_table={'overflowX': 'auto'},\n",
+    "                sort_action='native',  # permet de trier la colonnes\n",
+    "                sort_mode='multi',      # permet de trier plusieurs colonnes\n",
     "            )\n",
     "            table2 = dash_table.DataTable(\n",
     "                data=filtered_df.iloc[:, cols].to_dict('records'),\n",
     "                page_size=10,\n",
-    "                style_table={'overflowX': 'auto'}\n",
+    "                style_table={'overflowX': 'auto'},\n",
+    "                sort_action='native',  # permet de trier la colonnes\n",
+    "                sort_mode='multi',      # permet de trier plusieurs colonnes\n",
     "            )\n",
     "    else : \n",
     "        table1 = dash_table.DataTable()\n",
@@ -1808,11 +1919,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5db73b78",
+   "execution_count": 20,
+   "id": "bba2d470",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-09-15 20:33:20\n",
+      "Temps expiré, It's clearing time\n",
+      "Temps expiré, It's clearing time\n",
+      "Temps expiré, It's clearing time\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "# Your string\n",
+    "date_string = \"20230915203320\"  # Replace with your actual string\n",
+    "\n",
+    "# Parse the string into a datetime object\n",
+    "date_format = \"%Y%m%d%H%M%S\"\n",
+    "parsed_datetime = datetime.strptime(date_string, date_format)\n",
+    "\n",
+    "# Now, parsed_datetime contains the datetime object\n",
+    "print(parsed_datetime)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "f58828df",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "all_files = os.listdir()\n",
+    "\n",
+    "desired_files = [file for file in all_files if \"banking_model_\" in file and len(file) == 28]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "4353dc5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['banking_model_20230915203320']"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Temps expiré, It's clearing time\n",
+      "Temps expiré, It's clearing time\n"
+     ]
+    }
+   ],
+   "source": [
+    "desired_files"
+   ]
   }
  ],
  "metadata": {
