Ajout d'un changelog du dashboard

--- a/Halifa_Ruben_2_Dashboard_082023.ipynb
+++ b/Halifa_Ruben_2_Dashboard_082023.ipynb
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c80ec2e6",
+   "id": "aba8e2a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f4189a63",
+   "id": "0fd0b244",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5cff27c6",
+   "id": "0099a86d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "97ef4f2e",
+   "id": "579f1ea2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a05066bd",
+   "id": "97e9d197",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2b345760",
+   "id": "592bcf31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "25f2a028",
+   "id": "027e7450",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "id": "b1d28100",
    "metadata": {
     "scrolled": false
@@ -881,7 +881,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x29d386081d0>"
+       "<IPython.lib.display.IFrame at 0x29d385772d0>"
       ]
      },
      "metadata": {},
@@ -896,6 +896,8 @@
     "\n",
     "#server = app.server\n",
     "app.title = 'Modèle de prédiction'\n",
+    "\n",
+    "versionning = \"version : 1.0.0\"\n",
     "\n",
     "temps_actuel = time.time()\n",
     "# Temps d'inactivité\n",
@@ -917,6 +919,10 @@
     "    # Titre dashboard\n",
     "    html.Div(className='row', children=\"Utilisation du modèle pour prédire l'obtention d'un prêt\",\n",
     "             style={'textAlign': 'center', 'color': 'black', 'fontSize': 48}),\n",
+    "    \n",
+    "    html.Div(className='row', children=versionning,\n",
+    "             style={'textAlign': 'right', 'color': 'black', 'fontSize': 12}),\n",
+    "    \n",
     "    html.Hr(style={'border-top': '4px solid black'}), # Ligne horizontale\n",
     "    \n",
     "    dcc.Link(\"Calibration du modèle\", href=\"/page_2\"),\n",
@@ -1920,7 +1926,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "bba2d470",
+   "id": "fa6537dc",
    "metadata": {},
    "outputs": [
     {
@@ -1951,7 +1957,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "f58828df",
+   "id": "aa7083cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1963,8 +1969,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "4353dc5f",
+   "execution_count": 29,
+   "id": "e1229321",
    "metadata": {},
    "outputs": [
     {
@@ -1973,22 +1979,22 @@
        "['banking_model_20230915203320']"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Temps expiré, It's clearing time\n",
-      "Temps expiré, It's clearing time\n"
-     ]
     }
    ],
    "source": [
     "desired_files"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4164608a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
