Correction garde en mémoire clients sélectionnés

--- a/Halifa_Ruben_2_Dashboard_082023.ipynb
+++ b/Halifa_Ruben_2_Dashboard_082023.ipynb
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "6eada622",
+   "id": "b1ba17c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "882a525c",
+   "id": "de47946e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "df05c2fc",
+   "id": "d58f7658",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "951aa286",
+   "id": "c553badc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "ee2d781a",
+   "id": "1d3e47d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "cee5730e",
+   "id": "cba400e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "cad65549",
+   "id": "bad44418",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "b0eeae5a",
+   "id": "5a076759",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 312,
    "id": "b1d28100",
    "metadata": {
     "scrolled": false
@@ -904,7 +904,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x29d49b65b50>"
+       "<IPython.lib.display.IFrame at 0x29d4d9b0e10>"
       ]
      },
      "metadata": {},
@@ -920,7 +920,7 @@
     "#server = app.server\n",
     "app.title = 'Modèle de prédiction'\n",
     "\n",
-    "versionning = \"version : 1.3.0\"\n",
+    "versionning = \"version : 1.3.2\"\n",
     "\n",
     "temps_actuel = time.time()\n",
     "# Temps d'inactivité\n",
@@ -1457,7 +1457,7 @@
     "    Output(component_id=\"dropdown_score_note\", component_property=\"options\"),\n",
     "    \n",
     "    Output(component_id=\"dropdown_client\", component_property=\"value\"),\n",
-    "    Output(component_id=\"selected_clients_note\", component_property=\"value\"),\n",
+    "    Output(component_id=\"selected_clients_note\", component_property=\"data\"),\n",
     "    Output(component_id=\"dropdown_variable_x\", component_property=\"value\"),\n",
     "    Output(component_id=\"dropdown_variable_y\", component_property=\"value\"),\n",
     "    Output(component_id=\"dropdown_fig_type\", component_property=\"value\"),\n",
@@ -1600,10 +1600,13 @@
     "                    selected_affichage = \"scatter\" \n",
     "        \n",
     "        option_client_categ = [\"Pret\", \"Non pret\", \"Score note\"]\n",
+    "\n",
     "        if selected_client_categ == \"Score note\":\n",
     "            option_note_categ = options\n",
-    "            # Si on a sélectionné \n",
-    "            if ctx.triggered_id  == \"dropdown_score_note\":\n",
+    "            \n",
+    "            # Si on a sélectionné des clients selon le score_note\n",
+    "            if selected_client_note is not None:\n",
+    "                \n",
     "                if selected_client_note in [\"a\", \"b\", \"c\", \"d\", \"e\", \"f\"]:\n",
     "                    selected_client_note_liste = file_df.loc[file_df['score_note'].str.startswith(selected_client_note), \"SK_ID_CURR\"]\n",
     "                # Sinon c'est lettre spécifique\n",
@@ -1640,7 +1643,7 @@
     "    Input(component_id=\"dropdown_client\", component_property=\"value\"),  \n",
     "    Input(component_id=\"dropdown_client_categorie\", component_property=\"value\"),\n",
     "    Input(component_id=\"fichier_utilisateur\", component_property=\"data\"),\n",
-    "    Input(component_id=\"selected_clients_note\", component_property=\"value\"),\n",
+    "    Input(component_id=\"selected_clients_note\", component_property=\"data\"),\n",
     "    \n",
     "    prevent_initial_call=True,\n",
     ")\n",
@@ -1749,7 +1752,7 @@
     "    \n",
     "    State(component_id=\"dropdown_client\", component_property=\"value\"),\n",
     "    State(component_id=\"dropdown_client_categorie\", component_property=\"value\"),\n",
-    "    State(component_id=\"selected_clients_note\", component_property=\"value\"),\n",
+    "    State(component_id=\"selected_clients_note\", component_property=\"data\"),\n",
     "    State(component_id=\"fichier_utilisateur\", component_property=\"data\"),\n",
     "    State(component_id=\"fichier_utilisateur_prediction\", component_property=\"data\"),\n",
     "    prevent_initial_call=True,\n",
@@ -1814,7 +1817,7 @@
     "    \n",
     "    Input(component_id=\"dropdown_scoring\", component_property=\"value\"),\n",
     "    Input(component_id=\"dropdown_client\", component_property=\"value\"),\n",
-    "    Input(component_id=\"selected_clients_note\", component_property=\"value\"),\n",
+    "    Input(component_id=\"selected_clients_note\", component_property=\"data\"),\n",
     "    Input(component_id=\"dropdown_variable_x\", component_property=\"value\"),\n",
     "    Input(component_id=\"dropdown_variable_y\", component_property=\"value\"),\n",
     "    Input(component_id=\"dropdown_fig_type\", component_property=\"value\"),\n",
@@ -2052,7 +2055,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "d562189d",
+   "id": "4e02ccfb",
    "metadata": {},
    "outputs": [
     {
@@ -2083,7 +2086,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "95c41633",
+   "id": "a9540b82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2096,7 +2099,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "973f4dbc",
+   "id": "e49f7053",
    "metadata": {},
    "outputs": [
     {
@@ -2117,7 +2120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4016e3df",
+   "id": "1b9b878f",
    "metadata": {},
    "outputs": [],
    "source": []
