Ajout note méthodologique, conclusions datadrift, correction features importance

--- a/Halifa_Ruben_2_Dashboard_082023.ipynb
+++ b/Halifa_Ruben_2_Dashboard_082023.ipynb
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "b1ba17c3",
+   "id": "e7ce0b20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,8 +104,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "0b7842a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url=\"http://banking-model-api-924e29320872.herokuapp.com/prediction\"\n",
+    "\n",
+    "\n",
+    "# On envoie une requête POST au format JSON (nos données au format JSON et le threshold)\n",
+    "response = requests.post(url, json={\"data\": df_preparation, \"thresh\": threshold})\n",
+    "\n",
+    "# On vérigie l'état de la réponse\n",
+    "if response.status_code == 200:\n",
+    "    # Si tout s'est bien déroulé\n",
+    "    # On récupère une réponse sous le format json\n",
+    "    df_reponse = response.json()  \n",
+    "\n",
+    "    # On retourne le dataframe modifié\n",
+    "    return df_reponse\n",
+    "else:\n",
+    "    # La requête a échouée\n",
+    "    print(\"La requête a échoué avec le code :\", response.status_code)\n",
+    "    print(\"Contenu du message :\", response.text)\n",
+    "\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 44,
-   "id": "de47946e",
+   "id": "a9e76a70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "d58f7658",
+   "id": "73486364",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "c553badc",
+   "id": "66f917c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "1d3e47d3",
+   "id": "7eb25f08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "cba400e3",
+   "id": "517c6da2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "bad44418",
+   "id": "6bc2f10e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,7 +813,7 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "5a076759",
+   "id": "dcb0719a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 313,
    "id": "b1d28100",
    "metadata": {
     "scrolled": false
@@ -904,7 +933,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x29d4d9b0e10>"
+       "<IPython.lib.display.IFrame at 0x29d4dad5810>"
       ]
      },
      "metadata": {},
@@ -2051,79 +2080,6 @@
     "if __name__ == '__main__':\n",
     "    app.run(debug=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "4e02ccfb",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2023-09-15 20:33:20\n",
-      "Temps expiré, It's clearing time\n",
-      "Temps expiré, It's clearing time\n",
-      "Temps expiré, It's clearing time\n"
-     ]
-    }
-   ],
-   "source": [
-    "from datetime import datetime\n",
-    "\n",
-    "# Your string\n",
-    "date_string = \"20230915203320\"  # Replace with your actual string\n",
-    "\n",
-    "# Parse the string into a datetime object\n",
-    "date_format = \"%Y%m%d%H%M%S\"\n",
-    "parsed_datetime = datetime.strptime(date_string, date_format)\n",
-    "\n",
-    "# Now, parsed_datetime contains the datetime object\n",
-    "print(parsed_datetime)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "a9540b82",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "all_files = os.listdir()\n",
-    "\n",
-    "desired_files = [file for file in all_files if \"banking_model_\" in file and len(file) == 28]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "e49f7053",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['banking_model_20230915203320']"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "desired_files"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1b9b878f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
