--- a/notebooks/Notebook_Model_Final_082023.ipynb
+++ b/notebooks/Notebook_Model_Final_082023.ipynb
@@ -2742,8 +2742,8 @@
    "metadata": {},
    "source": [
     "***\n",
-    "# <a name=\"T4\">Dérive du modèle</a>\n",
-    "### <a name = \"T4C1\">a. Evidently</a>"
+    "# <a name=\"T3\">Dérive du modèle</a>\n",
+    "### <a name = \"T3C1\">a. Evidently</a>"
    ]
   },
   {
@@ -3089,8 +3089,7 @@
     "    \n",
     "    \n",
     "    if os.path.isfile(combined_html_file):\n",
-    "        display(IFrame(combined_html_file, width=1000, height=1000))\n",
-    "\n"
+    "        display(IFrame(combined_html_file, width=1000, height=1000))\n"
    ]
   },
   {
@@ -3098,6 +3097,9 @@
    "id": "13669b8d",
    "metadata": {},
    "source": [
+    "**Note : Si le rapport ne s'affiche pas, il faut relancer la cellule, ou directement lire le fichier html**\n",
+    "\n",
+    "\n",
     "Un data drift a été retrouvé sur 13 variables sur 200. Ce qui concerne 5-10 % des variables seulement. Evidently estime qu'un data drift est présent si la moitiée des variables sont touchées.\n",
     "\n",
     "Mais si on compare à l'importance des variables, cela ne concerne que 2 variables sur les 40 plus importantes.\n",
